tests/errors/papercut/cell-and-group-conflict.expect
---CODE---
1
---STDERR---
Error: tests/errors/papercut/cell-and-group-conflict.futil
10 |    group incr {
   |    ^^^^^^^^^^^^ Name `incr' already bound by cell
tests/errors/papercut/cell-and-group-conflict.futil
6 |    incr = std_add(32);
  |    ^^^^^^^^^^^^^^^^^^ Previous definition
